fix: sidenav hidden by default (#85)

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -24,3 +24,7 @@ body {
   border-radius: 50%;
   display: inline-block;
 }
+
+.mat-menu-content {
+  padding: 0 !important;
+}
